# pedaler_core

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md  components.md  dsl_reference.md  wasm_integration.md
examples/circuits/: delay.ped  delay_hall_phaser.ped  diode_clipper.ped  distortion.ped  distortion_reverb.ped  flanger.ped  fuzz.ped  hall_reverb.ped  lofi.ped  opamp_overdrive.ped  phaser.ped  rc_lowpass.ped  reverb.ped  slapback.ped  treble_boost.ped
src/: error.rs  lib.rs  main.rs  wasm.rs
src/audio/: mod.rs
src/circuit/: graph.rs  mod.rs  types.rs  validate.rs
src/components/: bjt.rs  controls.rs  delay.rs  diode.rs  lfo.rs  linear.rs  mod.rs  opamp.rs  reverb.rs  sources.rs
src/dsl/: ast.rs  lexer.rs  mod.rs  parser.rs
src/solver/: mna.rs  mod.rs  newton.rs  simulator.rs
